--- a/views/questions/ask.ejs
+++ b/views/questions/ask.ejs
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ask Question</title>
-</head>
-<body>
-    <form action="/questions" method="POST">
-        <div>
-            <label for="title">Title: </label>
-            <input type="text" id="title" name="question[title]">
-        </div>
-        <div>
-            <label for="content">Content: </label>
-            <input type="text" id="content" name="question[content]">
-        </div>
-        <button>Ask Question</button>
-    </form>
-    <a href="/questions">All Questions</a>
-</body>
-</html>
+<% layout('layouts/boilerplate') %>
+<form action="/questions" method="POST">
+    <div>
+        <label for="title">Title: </label>
+        <input type="text" id="title" name="question[title]">
+    </div>
+    <div>
+        <label for="content">Content: </label>
+        <input type="text" id="content" name="question[content]">
+    </div>
+    <button>Ask Question</button>
+</form>
+<a href="/questions">All Questions</a>
