--- a/views/questions/index.ejs
+++ b/views/questions/index.ejs
@@ -1,19 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questions</title>
-</head>
-<body>
-    <h1>All Questions</h1>
-    <div>
-        <a href="/questions/ask">Ask a new question</a>
-    </div>
-    <ul>
-        <% for (let question of questions) { %>
-            <li><a href="/questions/<%= question.id %>"><%= question.title %></a></li>
-        <% } %>
-    </ul>
-</body>
-</html>
+<% layout('layouts/boilerplate') %>
+<h1>All Questions</h1>
+<div>
+    <a href="/questions/ask">Ask a new question</a>
+</div>
+<ul>
+    <% for (let question of questions) { %>
+        <li><a href="/questions/<%= question.id %>"><%= question.title %></a></li>
+    <% } %>
+</ul>
