--- a/views/questions/show.ejs
+++ b/views/questions/show.ejs
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show</title>
-</head>
-<body>
-    <h1><%= question.title %></h1>
-    <p><%= question.content %></p>
-    <p>
-        <a href="/questions/<%= question._id %>/edit">Edit</a>
-        <form action="/questions/<%= question._id %>?_method=DELETE" method="POST">
-            <button>Delete</button>
-        </form>
-    </p>
-    
-    <footer>
-        <a href="/questions">All Questions</a>
-    </footer>
-</body>
-</html>
+<% layout('layouts/boilerplate') %>
+<h1><%= question.title %></h1>
+<p><%= question.content %></p>
+<p>
+    <a href="/questions/<%= question._id %>/edit">Edit</a>
+    <form action="/questions/<%= question._id %>?_method=DELETE" method="POST">
+        <button>Delete</button>
+    </form>
+</p>
+
+<footer>
+    <a href="/questions">All Questions</a>
+</footer>
