--- a/views/questions/ask.ejs
+++ b/views/questions/ask.ejs
@@ -1,13 +1,28 @@
 <% layout('layouts/boilerplate') %>
-<form action="/questions" method="POST">
-    <div>
-        <label for="title">Title: </label>
-        <input type="text" id="title" name="question[title]">
-    </div>
-    <div>
-        <label for="content">Content: </label>
-        <input type="text" id="content" name="question[content]">
-    </div>
-    <button>Ask Question</button>
-</form>
-<a href="/questions">All Questions</a>
+<div class="row">
+    <h1>Ask a New Question</h1>
+    <form action="/questions" method="POST">
+        <div class="mb-3">
+            <label class="form-label" for="title"><b>Title</b></label>
+            <input
+                class="form-control"
+                type="text"
+                id="title"
+                name="question[title]"
+            />
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="content"><b>Content</b></label>
+            <input
+                class="form-control"
+                type="text"
+                id="content"
+                name="question[content]"
+            />
+        </div>
+        <div class="mb-3">
+            <button class="btn btn-success">Ask Question</button>
+        </div>
+    </form>
+    <a href="/questions">All Questions</a>
+</div>
