--- a/views/questions/edit.ejs
+++ b/views/questions/edit.ejs
@@ -1,14 +1,20 @@
 <% layout('layouts/boilerplate') %>
-<h1>Edit Question</h1>
-<form action="/questions/<%= question._id %>?_method=PUT" method="POST">
-    <div>
-        <label for="title">Title: </label>
-        <input type="text" id="title" name="question[title]" value="<%= question.title %>">
+    <div class="row">
+        <h1>Edit Question</h1>
+        <form action="/questions" method="POST">
+            <div class="mb-3">
+                <label class="form-label" for="title"><b>Title</b></label>
+                <input class="form-control" type="text" id="title" name="question[title]"
+                    value="<%= question.title %>" />
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="content"><b>Content</b></label>
+                <textarea class="form-control" type="text" id="content"
+                    name="question[content]"><%= question.content %></textarea>
+            </div>
+            <div class="mb-3">
+                <button class="btn btn-success">Save Question</button>
+            </div>
+        </form>
+        <a href="/questions/<%= question._id%>">Back to Question</a>
     </div>
-    <div>
-        <label for="content">Content: </label>
-        <input type="text" id="content" name="question[content]" value="<%= question.content %>">
-    </div>
-    <button>Save Question</button>
-</form>
-<a href="/questions/<%= question._id%>">Back to Question</a>
