--- a/views/questions/ask.ejs
+++ b/views/questions/ask.ejs
@@ -1,28 +1,19 @@
 <% layout('layouts/boilerplate') %>
-<div class="row">
-    <h1>Ask a New Question</h1>
-    <form action="/questions" method="POST">
-        <div class="mb-3">
-            <label class="form-label" for="title"><b>Title</b></label>
-            <input
-                class="form-control"
-                type="text"
-                id="title"
-                name="question[title]"
-            />
-        </div>
-        <div class="mb-3">
-            <label class="form-label" for="content"><b>Content</b></label>
-            <input
-                class="form-control"
-                type="text"
-                id="content"
-                name="question[content]"
-            />
-        </div>
-        <div class="mb-3">
-            <button class="btn btn-success">Ask Question</button>
-        </div>
-    </form>
-    <a href="/questions">All Questions</a>
-</div>
+    <div class="row">
+        <h1>Ask New Question</h1>
+        <form action="/questions" method="POST" class="valid-form" novalidate>
+            <div class="mb-3">
+                <label class="form-label" for="title"><b>Title</b></label>
+                <input class="form-control" type="text" id="title" name="question[title]" required />
+                <div class="invalid-feedback">Please enter a title for your question.</div>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="content"><b>Content</b></label>
+                <textarea class="form-control" type="text" id="content" name="question[content]"></textarea>
+            </div>
+            <div class="mb-3">
+                <button class="btn btn-success">Ask Question</button>
+            </div>
+        </form>
+        <a href="/questions">All Questions</a>
+    </div>
