Added joi schema to check the validity of question
- Installed joi in npm

--- a/views/questions/ask.ejs
+++ b/views/questions/ask.ejs
@@ -3,7 +3,7 @@
         <h1>Ask New Question</h1>
         <form action="/questions" method="POST" class="valid-form" novalidate>
             <div class="mb-3">
-                <label class="form-label" for="title"><b>Title</b></label>
+                <label class="form-label" for="title"><b>Title (Maximum 250 Characters)</b></label>
                 <input class="form-control" type="text" id="title" name="question[title]" required />
                 <div class="invalid-feedback">Please enter a title for your question.</div>
             </div>
