--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,11 +1,14 @@
 <% layout('layouts/boilerplate') %>
     <div class="alert alert-danger" role="alert">
-        <small>Error Code: <%= err.statusCode %></small>
+        <small>Error Code: <%= error.statusCode %></small>
         <h4 class="alert-heading">
-            <%= err.message %>
+            <%= error.message %>
         </h4>
+        <p>
+            <%= error.detail %>
+        </p>
         <hr>
         <p class="mb-0">
-            <%= err.stack %>
+            <%= error.stack %>
         </p>
     </div>
