--- a/views/questions/edit.ejs
+++ b/views/questions/edit.ejs
@@ -3,7 +3,7 @@
         <h1>Edit Question</h1>
         <form action="/questions" method="POST" class="valid-form" novalidate>
             <div class="mb-3">
-                <label class="form-label" for="title"><b>Title</b></label>
+                <label class="form-label" for="title"><b>Title (Maximum 250 Characters)</b></label>
                 <input class="form-control" type="text" id="title" name="question[title]" value="<%= question.title %>"
                     required />
                 <div class="invalid-feedback">Please enter a title for your question.</div>
