--- a/views/questions/view.ejs
+++ b/views/questions/view.ejs
@@ -19,10 +19,11 @@
         </div>
     </div>
 
-    <form action="/questions/<%= question._id %>/answer" method="POST" class="mb-3">
+    <form action="/questions/<%= question._id %>/answer" method="POST" class="mb-3 valid-form" novalidate>
         <div class="mb-3">
             <label class="form-label" for="reference">Reference</label>
-            <input class="form-control" type="text" id="reference" name="answer[reference]" />
+            <input class="form-control" type="text" id="reference" name="answer[reference]" required />
+            <div class="invalid-feedback">Please provide a reference.</div>
         </div>
         <div class="mb-3">
             <label class="form-label" for="comment">Comment</label>
